--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
         android:src="@drawable/ic_baseline_movie"
+        android:contentDescription="@string/app_name"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
